syntax = "proto3";
package DtspProto;
message File
{
	bytes data = 1;
    string json_header=2;
}
message FileList
{
    repeated File file_list = 1;
    string json_header=2;
}